cargo-features = ["edition2024"]

[package]
name = "sunfish"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
crate-type = [
    "staticlib", # for hardware
    "dylib",     # for simulator
    "rlib",      # to link with bin
]

[dependencies]
playdate-sys = "*"
playdate-color = "*"
playdate-controls = "*"
playdate-fs = "*"
playdate-graphics = "*"
playdate-sprite = "*"
playdate = "*"


# See more about playdate metadata:
# https://github.com/boozook/playdate/blob/main/support/build/README.md#assets
[package.metadata.playdate]
name = "Sunfish"
author = "Evan Simkowitz"
bundle-id = "dev.simkowitz.sunfish"
description = "Sailing game for the Playdate"

# Assets Configuration
[package.metadata.playdate.options.assets]
dependencies = true    # allow to build assets for dependencies (default is `true`)
overwrite = true       # overwrite existing (default is `true`)
method = "link"        # "copy" or "link"   (default is `link`)
follow-symlinks = true # follow symlinks    (default is `true`)
